# CameraDetector

./: .gitignore  .mxproject  README.md  Tracking_camera.ioc
Inc/: main.h  stm32f4xx_it.h
Src/: main.c  stm32f4xx_hal_msp.c  stm32f4xx_it.c
Src/app/: app.cpp  app.hpp  app_entry.cpp  app_entry.h  packet.hpp  servo_motor.cpp  servo_motor.hpp
cmake/stm32cubemx/: CMakeLists.txt
raspberry_pi_project/: CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json
raspberry_pi_project/cmake/toolchains/: rpi-aarch64-docker.cmake  rpi-aarch64.cmake
raspberry_pi_project/docker/rpi-cross/: Dockerfile
raspberry_pi_project/scripts/: deploy_to_pi.sh  gdbinit.sh  run_gdbserver.sh
raspberry_pi_project/src/: CVHelper.cpp  CVHelper.h  CameraStreamer.cpp  CameraStreamer.h  FaceRecognizer.cpp  FaceRecognizer.h  FaceTracker.cpp  FaceTracker.h  FrameBuffer.cpp  FrameBuffer.h  MjpegHttpServer.cpp  MjpegHttpServer.h  Packet.cpp  Packet.h  UartConnection.cpp  UartConnection.h  main.cpp
raspberry_pi_project/src/Connection/: IConnection.h  RPiPacket.cpp  RPiPacket.h  SPIConnection.cpp  SPIConnection.h  UartConnection.cpp  UartConnection.h
raspberry_pi_project/src/FaceDetector/: FaceDetector_CPU.cpp  FaceDetector_CPU.h  FaceDetector_Hailo.cpp  FaceDetector_Hailo.h  IFaceDetector.h
shared/: CMakeLists.txt
shared/protocol/: Packet.cpp  Packet.h
stm32_project/: CMakeLists.txt  Tracking_camera.ioc  cmake_install.cmake
stm32_project/Inc/: main.h  stm32f4xx_it.h
stm32_project/Src/: main.c  stm32f4xx_hal_msp.c  stm32f4xx_it.c
stm32_project/Src/app/: app.cpp  app.hpp  app_entry.cpp  app_entry.h  packet.cpp  servo_motor.cpp  stm_packet.cpp
stm32_project/Src/app/helpers/: ring_bufer.cpp  ring_buffer.hpp
stm32_project/cmake/stm32cubemx/: cmake_install.cmake
stm32_project/shared_stm/: cmake_install.cmake
